[project]
name = "route-planner-solver"
version = "0.1.0"
description = "GTI Route Planner — OR-Tools VRPTW solver service. Backend for route-planner-web."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "ortools>=9.11",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
